--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "halfmoon",
-  "version": "1.1.1",
-  "description": "Front-end framework with a built-in dark mode and full customizability using CSS variables; great for building dashboards and tools",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/halfmoonui/halfmoon.git"
-  },
-  "keywords": [
-    "halfmoon",
-    "css",
-    "javascript",
-    "dark-theme",
-    "dark-mode",
-    "dashboard",
-    "web-framework",
-    "css-framework",
-    "css-variables",
-    "css-custom-properties"
-  ],
-  "author": "Halfmoon UI",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/halfmoonui/halfmoon/issues"
-  },
-  "homepage": "https://github.com/halfmoonui/halfmoon#readme"
+    "name": "TyFolio",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+        "@11ty/eleventy": "^0.12.1"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "start": "eleventy --serve",
+        "build": "eleventy"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/tylertomaseski/TyFolio.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/tylertomaseski/TyFolio/issues"
+    },
+    "homepage": "https://github.com/tylertomaseski/TyFolio#readme"
 }
